# SwarmProjectV1

./: .gitignore  README.md  config.json
config/: fleet.json
documentation/: DEBUG_GUIDE.md  README.md  control.md  core.md  optitrack.md  robot_code.md  ros2_architecture.md  server.md  services.md  udp_broadcaster.md  udp_client.md  ui.md
hydra/: backend_server.py
hydra/net/: udp_server.py
hydra/ros/: ros_controller.py  ros_tracker.py
local/: config.json  frontend_app.py
local/core/: config_loader.py  racing_config.py
local/frontend/: __init__.py  udp_client.py
local/services/: path_service.py  recording_service.py
local/ui/: components.py  tabbed_interface.py  virtual_joystick.py
local/ui/backend/: __init__.py  backend_proxy.py  command_sender.py  message_handler.py
local/ui/handlers/: __init__.py  button_handler.py  canvas_handler.py  canvas_zoom_pan_handler.py  mode_handler.py  robot_handler.py
local/ui/rendering/: __init__.py  canvas_coordinates.py  robot_renderer.py
local/ui/state/: __init__.py  app_state.py
local/ui/tabs/: __init__.py  dashboard_tab.py  monitoring_tab.py  path_planning_tab.py  robots_tab.py  settings_tab.py
local/ui/widgets/: __init__.py  robot_config_panel.py  robot_list_widget.py  status_bar.py
robot_code/: README.md  move.py  move_ros1.py
robot_code/Testing/: ARCHITECTURE.md  DELAY_COMPENSATION.md  USAGE.md  demo.py  path_follower.py  path_simulator.py  path_simulator_real.py  test.py
robot_code/Working/: working_move.py
ros2_ws/src/orchestration/hydra_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/orchestration/hydra_bringup/launch/: robot_agent.launch.py  supervisor.launch.py
ros2_ws/src/orchestration/mosaic_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/orchestration/mosaic_bringup/launch/: robot_agent.launch.py  supervisor.launch.py
ros2_ws/src/robots/hydra_robot_agent/: package.xml  setup.cfg  setup.py
ros2_ws/src/robots/hydra_robot_agent/hydra_robot_agent/: agent_node.py
ros2_ws/src/robots/mosaic_robot_agent/: package.xml  setup.cfg  setup.py
ros2_ws/src/robots/mosaic_robot_agent/mosaic_robot_agent/: agent_node.py
ros2_ws/src/server/hydra_optitrack_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/server/hydra_optitrack_bridge/hydra_optitrack_bridge/: bridge_node.py
ros2_ws/src/server/hydra_supervisor_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/server/hydra_supervisor_bridge/hydra_supervisor_bridge/: bridge_node.py  udp_server.py
ros2_ws/src/server/mosaic_optitrack_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/server/mosaic_optitrack_bridge/mosaic_optitrack_bridge/: bridge_node.py
ros2_ws/src/server/mosaic_supervisor_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/server/mosaic_supervisor_bridge/mosaic_supervisor_bridge/: bridge_node.py  udp_broadcaster.py
ros2_ws/src/shared/hydra_common/: package.xml  setup.cfg  setup.py
ros2_ws/src/shared/hydra_common/hydra_common/: base_controller.py  fleet_config.py
ros2_ws/src/shared/hydra_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/shared/hydra_interfaces/action/: FollowPath.action
ros2_ws/src/shared/hydra_interfaces/msg/: ManualDrive.msg  RobotStatus.msg
ros2_ws/src/shared/hydra_interfaces/srv/: SetRacingConfig.srv
ros2_ws/src/shared/mosaic_common/: package.xml  setup.cfg  setup.py
ros2_ws/src/shared/mosaic_common/mosaic_common/: __init__.py  fleet_config.py  path_follower.py
ros2_ws/src/shared/mosaic_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/shared/mosaic_interfaces/msg/: PathProgress.msg  RobotDiagnostics.msg
scripts/: README.md  check_fleet_status.sh  deploy_all.py  deploy_robot.sh  deploy_server.sh  run_local_ui.sh  set_supervisor_ip.py
server/: backend_server.py  config.json
server/core/: config_loader.py  robot.py
server/net/: udp_broadcaster.py
server/trackers/: __init__.py  base_tracker.py  battery_tracker.py  imu_tracker.py  odometry_tracker.py  range_tracker.py  velocity_tracker.py
src/: example_usage.py  path_drawing_app.py  robot_controller_app.py
src/control/: __init__.py  path_follower.py  robot_controller.py
src/core/: config_loader.py  robot.py
src/optitrack/: tracker.py  udp_monitor.py
src/server/: server_barebones.py  server_path_planning.py  server_tracking_advanced.py  server_tracking_barebones.py  server_ui.py
src/services/: path_service.py  recording_service.py
src/ui/: components.py  virtual_joystick.py
