<?xml version="1.0"?>
<package format="3">
  <name>hydra_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the Hydra ROS 2 stack.</description>
  <maintainer email="dev@example.com">Hydra</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>hydra_robot_agent</exec_depend>
  <exec_depend>hydra_supervisor_bridge</exec_depend>
  <exec_depend>hydra_optitrack_bridge</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
