<?xml version="1.0"?>
<package format="3">
  <name>hydra_supervisor_bridge</name>
  <version>0.1.0</version>
  <description>Hydra ROS 2 supervisor bridge for UI and Gama UDP compatibility.</description>
  <maintainer email="dev@example.com">Hydra</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>hydra_common</depend>
  <depend>hydra_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
