<?xml version="1.0"?>
<package format="3">
  <name>mosaic_optitrack_bridge</name>
  <version>0.1.0</version>
  <description>Optional Mosaic OptiTrack relay bridge for ROS 2 pose topics.</description>
  <maintainer email="dev@example.com">Mosaic</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>mosaic_common</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
