<?xml version="1.0"?>
<package format="3">
  <name>hydra_common</name>
  <version>0.1.0</version>
  <description>Shared Python utilities for the Hydra ROS 2 stack.</description>
  <maintainer email="dev@example.com">Hydra</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3-setuptools</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
