<?xml version="1.0"?>
<package format="3">
  <name>mosaic_interfaces</name>
  <version>0.1.0</version>
  <description>Mosaic ROS 2 custom interfaces.</description>
  <maintainer email="dev@example.com">Mosaic</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export/>
</package>
